--- a/suspensao.html
+++ b/suspensao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suspensão da CNH - CNH em Dia Soluções</title>
-    <meta name="description" content="Defesa contra suspensão da CNH. Recursos administrativos e estratégias para reverter ou reduzir o período de suspensão.">
+    <meta name="description" content="Assessoria especializada em processos de suspensão da CNH. Suporte administrativo e estratégias técnicas para regularizar sua habilitação.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,121 +29,88 @@
         <div class="content-wrapper">
             <h1>Suspensão da CNH</h1>
             
-            <p>A suspensão do direito de dirigir é uma penalidade administrativa que impede temporariamente o condutor de exercer sua atividade. Esta medida pode ser aplicada por diferentes motivos previstos no Código de Trânsito Brasileiro e tem impacto significativo na vida pessoal e profissional do condutor.</p>
+            <p>A suspensão do direito de dirigir é uma penalidade administrativa que impede temporariamente o condutor de exercer sua atividade. Essa medida é aplicada conforme o Código de Trânsito Brasileiro e impacta diretamente a vida pessoal e profissional do motorista.</p>
 
             <h2>O que é a Suspensão da CNH?</h2>
             
-            <p>A suspensão da CNH é uma penalidade que proíbe temporariamente o condutor de dirigir qualquer veículo automotor. Durante o período de suspensão, a habilitação fica retida pelo órgão de trânsito e o condutor não pode exercer o direito de dirigir sob pena de cometer infração gravíssima e ter sua CNH cassada.</p>
+            <p>Trata-se de uma penalidade que proíbe o condutor de dirigir veículos automotores por um período determinado. Durante a suspensão, a CNH fica retida pelo órgão de trânsito, e dirigir nesse período pode resultar em cassação da habilitação.</p>
 
-            <p>O período de suspensão pode variar de acordo com a gravidade da infração e as circunstâncias do caso, podendo ser de alguns meses até anos, dependendo da situação.</p>
+            <p>O prazo de suspensão varia conforme o tipo e a gravidade da infração, podendo ir de alguns meses até mais de um ano, conforme o histórico do condutor.</p>
 
-            <h2>Motivos para Suspensão da CNH</h2>
+            <h2>Principais Motivos de Suspensão</h2>
 
-            <h3>Acúmulo de Pontos</h3>
-            <p>O condutor que atingir 40 pontos no período de 12 meses (ou 30 pontos para condutores profissionais e 20 pontos para quem cometeu infração gravíssima) terá sua CNH suspensa. Este é um dos motivos mais comuns de suspensão e pode ser evitado com o acompanhamento adequado da pontuação.</p>
+            <h3>🔹 Acúmulo de Pontos</h3>
+            <p>O condutor que atingir 40 pontos em 12 meses (ou 30/20 pontos conforme o tipo de infração) pode ter a CNH suspensa. Acompanhar a pontuação é essencial para evitar o processo.</p>
 
-            <h3>Infrações Gravíssimas Específicas</h3>
-            <p>Algumas infrações gravíssimas resultam em suspensão imediata do direito de dirigir, independentemente da pontuação acumulada. Entre elas estão:</p>
+            <h3>🔹 Infrações Gravíssimas Específicas</h3>
+            <p>Algumas infrações resultam em suspensão direta, mesmo sem atingir o limite de pontos, como:</p>
 
             <ul>
-                <li>Dirigir sob influência de álcool ou substâncias psicoativas</li>
-                <li>Participar de competições não autorizadas (racha)</li>
-                <li>Recusar-se a realizar teste de alcoolemia</li>
-                <li>Disputar corrida ou manobras perigosas</li>
-                <li>Dirigir ameaçando pedestres ou outros condutores</li>
+                <li>Dirigir sob influência de álcool ou drogas</li>
+                <li>Participar de competições não autorizadas (rachas)</li>
+                <li>Recusar-se a realizar o teste do bafômetro</li>
+                <li>Praticar manobras perigosas</li>
+                <li>Dirigir ameaçando outros usuários da via</li>
             </ul>
-
-            <h3>Reincidência em Infrações Médias ou Graves</h3>
-            <p>A reincidência em infrações médias ou graves dentro de 12 meses também pode resultar em suspensão da CNH, mesmo sem atingir o limite de pontos.</p>
 
             <div class="highlight-box">
                 <h3>⚠️ Atenção</h3>
-                <p>Dirigir com a CNH suspensa é infração gravíssima que pode levar à cassação da habilitação, além de apreensão do veículo e multa. Durante o período de suspensão, é fundamental respeitar a penalidade.</p>
+                <p>Dirigir com a CNH suspensa é infração gravíssima e pode gerar cassação da habilitação. Respeitar o período de suspensão é fundamental.</p>
             </div>
 
             <h2>Prazos de Suspensão</h2>
-
-            <p>Os prazos de suspensão variam conforme a infração cometida:</p>
-
             <ul>
-                <li><strong>Suspensão por pontos:</strong> De 6 meses a 1 ano, dependendo do histórico do condutor</li>
-                <li><strong>Dirigir sob efeito de álcool:</strong> 12 meses na primeira vez, podendo aumentar em reincidências</li>
-                <li><strong>Recusa ao teste do bafômetro:</strong> 12 meses</li>
-                <li><strong>Participação em racha:</strong> 12 meses</li>
-                <li><strong>Outras infrações gravíssimas:</strong> De 2 a 8 meses, conforme a gravidade</li>
+                <li><strong>Por pontos:</strong> de 6 meses a 1 ano</li>
+                <li><strong>Por dirigir sob efeito de álcool:</strong> 12 meses</li>
+                <li><strong>Por recusa ao bafômetro:</strong> 12 meses</li>
+                <li><strong>Por rachas e infrações gravíssimas:</strong> de 2 a 8 meses</li>
             </ul>
 
-            <h2>Processo de Suspensão</h2>
+            <h2>Etapas do Processo</h2>
 
-            <h3>Notificação</h3>
-            <p>O condutor é notificado pelo DETRAN sobre a instauração do processo de suspensão. Esta notificação informa sobre a infração ou situação que motivou o processo e os prazos para defesa.</p>
+            <h3>📩 Notificação</h3>
+            <p>O condutor é notificado pelo DETRAN sobre a abertura do processo e o prazo para se manifestar.</p>
 
-            <h3>Direito de Defesa</h3>
-            <p>Após receber a notificação, o condutor tem o prazo de 15 dias para apresentar sua defesa prévia. É fundamental aproveitar esta oportunidade para contestar a suspensão com argumentos técnicos e jurídicos sólidos.</p>
+            <h3>📝 Defesa Prévia</h3>
+            <p>Há prazo de 15 dias para apresentar defesa administrativa. Nessa fase, são avaliadas possíveis irregularidades formais, inconsistências ou erros processuais.</p>
 
-            <h3>Decisão Administrativa</h3>
-            <p>Após análise da defesa, o órgão de trânsito emite uma decisão. Se a defesa for indeferida, ainda é possível recorrer à JARI (Junta Administrativa de Recursos de Infrações) no prazo de 30 dias.</p>
+            <h3>📋 Julgamento e Recurso</h3>
+            <p>Após a decisão, ainda é possível apresentar recursos administrativos às instâncias competentes (como a JARI). Todo o processo é técnico e deve seguir rigorosamente os prazos.</p>
 
-            <h3>Cumprimento da Penalidade</h3>
-            <p>Caso todos os recursos sejam esgotados e a suspensão seja mantida, o condutor deverá entregar sua CNH ao DETRAN e cumprir o período determinado. Após o cumprimento, será necessário realizar curso de reciclagem antes de recuperar o direito de dirigir.</p>
+            <h3>📚 Cumprimento da Penalidade</h3>
+            <p>Se mantida a penalidade, o condutor deve entregar sua CNH ao DETRAN, cumprir o prazo e realizar o curso de reciclagem para reaver o documento.</p>
 
-            <h2>Como Evitar ou Reverter a Suspensão</h2>
+            <h2>Como Ajudamos</h2>
+            <p>A <strong>CNH em Dia Soluções</strong> oferece suporte técnico e assessoria administrativa completa para condutores que enfrentam processos de suspensão:</p>
 
-            <h3>Defesa Prévia Fundamentada</h3>
-            <p>A elaboração de uma defesa prévia bem fundamentada é essencial para evitar a suspensão. Nossa equipe analisa tecnicamente cada caso, identificando possíveis irregularidades no processo de autuação, vícios formais ou argumentos que possam reverter a penalidade.</p>
-
-            <h3>Recursos Administrativos</h3>
-            <p>Mesmo após o indeferimento da defesa prévia, é possível recorrer em diferentes instâncias administrativas. Cada recurso deve ser elaborado com estratégia específica e fundamentação adequada ao órgão julgador.</p>
-
-            <h3>Contestação de Pontos</h3>
-            <p>Em casos de suspensão por acúmulo de pontos, é possível contestar as multas que geraram a pontuação. Se houver sucesso na anulação de multas suficientes para reduzir a pontuação abaixo do limite, a suspensão pode ser revertida.</p>
-
-            <h3>Redução do Prazo</h3>
-            <p>Mesmo quando não é possível evitar completamente a suspensão, em alguns casos é viável obter a redução do prazo através de recursos bem fundamentados que demonstrem circunstâncias atenuantes.</p>
+            <ul>
+                <li>Análise detalhada do processo</li>
+                <li>Elaboração de defesas e recursos administrativos</li>
+                <li>Contestação de multas que geraram pontuação</li>
+                <li>Orientação sobre prazos e procedimentos</li>
+                <li>Suporte para regularização e reciclagem</li>
+            </ul>
 
             <div class="highlight-box">
-                <h3>💡 Importante</h3>
-                <p>O tempo é crucial em processos de suspensão. Quanto antes você buscar assessoria especializada, maiores serão as chances de reverter ou minimizar a penalidade. Não deixe para a última hora!</p>
+                <h3>💡 Dica Importante</h3>
+                <p>O tempo é decisivo em processos administrativos. Quanto antes você buscar orientação técnica, maiores as chances de sucesso. Agir rápido faz toda diferença.</p>
             </div>
 
             <h2>Curso de Reciclagem</h2>
-
-            <p>Após cumprir o período de suspensão, o condutor deve realizar obrigatoriamente um curso de reciclagem antes de recuperar o direito de dirigir. Este curso tem carga horária de 30 horas e aborda temas relacionados à legislação de trânsito, direção defensiva e primeiros socorros.</p>
-
-            <p>Somente após a conclusão do curso e aprovação no exame final, a CNH será devolvida ao condutor.</p>
-
-            <h2>Nossos Serviços em Suspensão da CNH</h2>
-
-            <p>A CNH em Dia Soluções oferece assessoria completa para condutores que enfrentam processos de suspensão:</p>
-
-            <ul>
-                <li>Análise detalhada do processo de suspensão</li>
-                <li>Elaboração de defesa prévia técnica e fundamentada</li>
-                <li>Recursos administrativos em todas as instâncias</li>
-                <li>Contestação de multas que geraram pontos</li>
-                <li>Estratégias para redução do prazo de suspensão</li>
-                <li>Acompanhamento processual completo</li>
-                <li>Orientação sobre direitos e deveres durante a suspensão</li>
-                <li>Assessoria para reabilitação após cumprimento da penalidade</li>
-            </ul>
+            <p>Após cumprir o período de suspensão, é obrigatório realizar o curso de reciclagem, com 30 horas de duração e prova final. Somente após a aprovação o condutor recupera o direito de dirigir.</p>
 
             <h2>Consequências da Suspensão</h2>
+            <p>A suspensão da CNH pode impactar a rotina e o trabalho, especialmente de condutores profissionais. Também pode afetar o histórico junto a seguradoras e aumentar o custo de apólices.</p>
 
-            <p>Além da impossibilidade de dirigir, a suspensão da CNH pode trazer diversas consequências negativas. Para condutores profissionais, pode significar a perda temporária da fonte de renda. Para todos os condutores, representa limitação na mobilidade e dependência de terceiros ou transporte público.</p>
-
-            <p>Além disso, a suspensão fica registrada no histórico do condutor, o que pode dificultar a obtenção de seguros de veículos e aumentar os valores das apólices.</p>
-
-            <h2>Por que Buscar Ajuda Especializada</h2>
-
-            <p>Processos de suspensão da CNH envolvem prazos rigorosos, procedimentos específicos e conhecimento técnico da legislação de trânsito. Um erro na defesa ou perda de prazo pode significar a confirmação da suspensão.</p>
-
-            <p>Nossa equipe possui experiência em defesas administrativas e conhece as melhores estratégias para cada tipo de situação. Atuamos de forma ágil e eficiente para proteger seus direitos e buscar a melhor solução para seu caso.</p>
+            <h2>Por que Contar com a CNH em Dia</h2>
+            <p>Atuamos com foco em soluções administrativas e estratégias técnicas para proteger o direito de dirigir dentro dos limites legais. Contamos com consultoria jurídica parceira para os casos que exigem acompanhamento judicial.</p>
 
             <div style="text-align: center; margin-top: 3rem;">
-                <a href="contato.html" class="cta-button">Defender Minha CNH Agora</a>
+                <a href="contato.html" class="cta-button">Falar com Nossa Equipe</a>
             </div>
         </div>
     </div>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section">
@@ -188,11 +155,9 @@
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
         const navLinks = document.querySelector('.nav-links');
-
         menuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
         });
-
         window.addEventListener('scroll', () => {
             const header = document.querySelector('header');
             if (window.scrollY > 100) {
@@ -204,4 +169,3 @@
     </script>
 </body>
 </html>
-
