--- a/contato.html
+++ b/contato.html
@@ -103,7 +103,7 @@
             </div>
 
             <!-- CONFIG FORM SUBMIT -->
-            <input type="hidden" name="_next" value="https://igornovaiss.github.io/cnhemdia/contato.html">
+            <input type="hidden" name="_next" value="https://cnhemdiasolucoes.com.br/">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Nova solicitação - CNH em Dia Soluções">
 
