Add legal notice to main content
Added a legal notice section to the main content area.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
         <a href="contato.html" class="cta-button">Solicitar Atendimento</a>
     </section>
 
+    <main style="padding: 20px;" class="content-page">
+        <div class="legal-note">
+                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.            </div>
+        </div>
+    </main>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section">
