Insert legal notice in cassacao.html
Added a legal notice section to the page.

--- a/cassacao.html
+++ b/cassacao.html
@@ -145,8 +145,6 @@
             <ul>
                 <li>Experiência comprovada em processos administrativos de trânsito</li>
                 <li>Conhecimento técnico especializado</li>
-                <li>Atuação em todas as instâncias administrativas</li>
-                <li>Encaminhamento para advogados parceiros em casos que exigem atuação judicial</li>
                 <li>Comprometimento e ética em todos os atendimentos</li>
             </ul>
 
@@ -157,6 +155,12 @@
             </div>
         </div>
     </div>
+
+    <main style="padding: 20px;" class="content-page">
+        <div class="legal-note">
+                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="footer-content">
