--- a/contato.html
+++ b/contato.html
@@ -166,12 +166,10 @@
     </section>
 
     <!-- ✅ NOTA LEGAL PARA BLINDAGEM -->
-    <section class="legal-section" style="padding: 40px 10%; text-align: center; background: var(--white);">
+     <section class="legal-section" style="padding: 40px 10%; text-align: center; background: var(--white);">
         <h2>Nota Legal</h2>
         <p style="max-width: 800px; margin: 0 auto; opacity: 0.9;">
-            A <strong>CNH em Dia Soluções</strong> oferece suporte técnico e administrativo em processos de trânsito, 
-            sem exercer atividades privativas da advocacia. Casos que exijam atuação jurídica são encaminhados para 
-            <strong>advogados parceiros regularmente inscritos na OAB</strong>.
+            A <strong>CNH em Dia Soluções</strong> atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.
         </p>
     </section>
 
@@ -198,6 +196,11 @@
                     <li><a href="sobre.html">Sobre Nós</a></li>
                     <li><a href="servicos.html">Nossos Serviços</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><a href="cnh-suspensa-curso-reciclagem.html">Reciclagem</a></li>
+                    <li><a href="lei-seca.html">Lei Seca</a></li>
+                    <li><a href="pontuacao-cnh.html">Pontuação</a></li>
+                    <li><a href="indicacao-condutor.html">Indicação De Condutor</a></li>
+                    <li><a href="recurso-multa-vencido.html">Recurso Multa Vencido</a></li>
                 </ul>
             </div>
 
