--- a/multas.html
+++ b/multas.html
@@ -103,13 +103,17 @@
 
             <p>Procure orientação especializada em casos de multas gravíssimas, risco de suspensão da CNH, valores elevados, ou dúvidas sobre irregularidades no processo.</p>
 
-            <p>A equipe da <strong>CNH em Dia Soluções</strong> atua de forma técnica e administrativa, auxiliando o condutor a compreender seus direitos e apresentar recursos fundamentados junto aos órgãos de trânsito.</p>
-
             <div style="text-align: center; margin-top: 3rem;">
                 <a href="contato.html" class="cta-button">Analisar Minha Multa Agora</a>
             </div>
         </div>
     </div>
+
+    <main style="padding: 20px;" class="content-page">
+        <div class="legal-note">
+                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="footer-content">
@@ -134,6 +138,11 @@
                     <li><a href="sobre.html">Sobre Nós</a></li>
                     <li><a href="servicos.html">Nossos Serviços</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><a href="cnh-suspensa-curso-reciclagem.html">Reciclagem</a></li>
+                    <li><a href="lei-seca.html">Lei Seca</a></li>
+                    <li><a href="pontuacao-cnh.html">Pontuação</a></li>
+                    <li><a href="indicacao-condutor.html">Indicação De Condutor</a></li>
+                    <li><a href="recurso-multa-vencido.html">Recurso Multa Vencido</a></li>
                 </ul>
             </div>
 
