--- a/provisoria.html
+++ b/provisoria.html
@@ -117,13 +117,17 @@
 
             <p>O período probatório é uma fase decisiva para o novo condutor. Uma única infração pode gerar a perda de todo o investimento feito no processo de habilitação.</p>
 
-            <p>A equipe da <strong>CNH em Dia Soluções</strong> atua com orientação técnica e acompanhamento administrativo, ajudando o condutor a evitar prejuízos e manter sua habilitação regularizada de forma segura e legal.</p>
-
             <div style="text-align: center; margin-top: 3rem;">
                 <a href="contato.html" class="cta-button">Evitar Perda da Provisória Agora</a>
             </div>
         </div>
     </div>
+
+    <main style="padding: 20px;" class="content-page">
+        <div class="legal-note">
+                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="footer-content">
@@ -148,6 +152,11 @@
                     <li><a href="sobre.html">Sobre Nós</a></li>
                     <li><a href="servicos.html">Nossos Serviços</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><a href="cnh-suspensa-curso-reciclagem.html">Reciclagem</a></li>
+                    <li><a href="lei-seca.html">Lei Seca</a></li>
+                    <li><a href="pontuacao-cnh.html">Pontuação</a></li>
+                    <li><a href="indicacao-condutor.html">Indicação De Condutor</a></li>
+                    <li><a href="recurso-multa-vencido.html">Recurso Multa Vencido</a></li>
                 </ul>
             </div>
 
