--- a/suspensao.html
+++ b/suspensao.html
@@ -102,7 +102,7 @@
             <h2>Consequências da Suspensão</h2>
             <p>A suspensão da CNH pode impactar a rotina e o trabalho, especialmente de condutores profissionais. Também pode afetar o histórico junto a seguradoras e aumentar o custo de apólices.</p>
 
-            <h2>Por que Contar com a CNH em Dia</h2>
+            <h2>Por que Contar com a CNH em Dia Soluções</h2>
             <p>Atuamos com foco em soluções administrativas e estratégias técnicas para proteger o direito de dirigir dentro dos limites legais. Contamos com consultoria jurídica parceira para os casos que exigem acompanhamento judicial.</p>
 
             <div style="text-align: center; margin-top: 3rem;">
@@ -110,6 +110,12 @@
             </div>
         </div>
     </div>
+
+    <main style="padding: 20px;" class="content-page">
+        <div class="legal-note">
+                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="footer-content">
@@ -134,6 +140,11 @@
                     <li><a href="sobre.html">Sobre Nós</a></li>
                     <li><a href="servicos.html">Nossos Serviços</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><a href="cnh-suspensa-curso-reciclagem.html">Reciclagem</a></li>
+                    <li><a href="lei-seca.html">Lei Seca</a></li>
+                    <li><a href="pontuacao-cnh.html">Pontuação</a></li>
+                    <li><a href="indicacao-condutor.html">Indicação De Condutor</a></li>
+                    <li><a href="recurso-multa-vencido.html">Recurso Multa Vencido</a></li>
                 </ul>
             </div>
 
