--- a/sobre.html
+++ b/sobre.html
@@ -12,21 +12,19 @@
 
 <body>
     <header>
-        <nav aria-label="Menu principal">
-            <a href="index.html" class="logo" aria-label="Voltar para a página inicial">
-                CNH em <span>Dia Soluções</span>
-            </a>
+        <nav>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="sobre.html" class="active">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
-            <button class="menu-toggle" aria-label="Abrir menu de navegação">
+            <div class="menu-toggle">
                 <span></span>
                 <span></span>
                 <span></span>
-            </button>
+            </div>
         </nav>
     </header>
 
