--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="sobre.html" class="active">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
             <div class="menu-toggle">
