Add legal notice and update footer links

--- a/sobre.html
+++ b/sobre.html
@@ -117,6 +117,12 @@
         </section>
     </main>
 
+    <main style="padding: 20px;" class="content-page">
+        <div class="legal-note">
+                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.            </div>
+        </div>
+    </main>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section">
@@ -140,6 +146,11 @@
                     <li><a href="sobre.html">Sobre Nós</a></li>
                     <li><a href="servicos.html">Nossos Serviços</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><a href="cnh-suspensa-curso-reciclagem.html">Reciclagem</a></li>
+                    <li><a href="lei-seca.html">Lei Seca</a></li>
+                    <li><a href="pontuacao-cnh.html">Pontuação</a></li>
+                    <li><a href="indicacao-condutor.html">Indicação De Condutor</a></li>
+                    <li><a href="recurso-multa-vencido.html">Recurso Multa Vencido</a></li>
                 </ul>
             </div>
 
