--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         </div>
     </main>
 
+    <a href="https://wa.me/5511918658626" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+    </a>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section">
