Add WhatsApp contact link to HTML page
Added a WhatsApp contact link with an icon for better accessibility.

--- a/cnh-suspensa-curso-reciclagem.html
+++ b/cnh-suspensa-curso-reciclagem.html
@@ -122,6 +122,10 @@
         </div>
     </main>
 
+    <a href="https://wa.me/5511970162260" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+    </a>
+
     <!-- Footer -->
     <footer>
         <div class="footer-content">
