Update links to use absolute paths

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CNH em Dia Soluções - Regularização Administrativa de Habilitação</title>
     <meta name="description" content="Soluções especializadas em processos administrativos de CNH: multas, suspensão, cassação e perda de provisória. Regularize sua habilitação com segurança e suporte técnico especializado.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
+            <a href="/" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
-                <li><a href="index.html">Início</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="/">Início</a></li>
+                <li><a href="/servicos/">Serviços</a></li>
+                <li><a href="/sobre/">Sobre</a></li>
+                <li><a href="/contato/">Contato</a></li>
             </ul>
             <div class="menu-toggle">
                 <span></span>
@@ -29,7 +29,7 @@
         <div class="hero-content">
             <h1>Sua CNH em Dia, Sua Vida em Movimento</h1>
             <p>Soluções administrativas para resolver questões com multas, suspensão, cassação e perda de provisória. Conte com nossa equipe especializada para regularizar sua habilitação com segurança.</p>
-            <a href="contato.html" class="cta-button">Fale Conosco Agora</a>
+            <a href="/contato/" class="cta-button">Fale Conosco Agora</a>
         </div>
     </section>
 
@@ -42,28 +42,28 @@
                 <div class="card-icon">🚗</div>
                 <h3>Multas de Trânsito</h3>
                 <p>Elaboração de recursos administrativos, defesa prévia e orientação técnica para contestar autuações indevidas.</p>
-                <a href="multas.html" class="card-link">Saiba mais →</a>
+                <a href="/multas/" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">⚠️</div>
                 <h3>Suspensão da CNH</h3>
                 <p>Suporte completo em processos de suspensão, com análise documental e estratégias para reduzir impactos administrativos.</p>
-                <a href="suspensao.html" class="card-link">Saiba mais →</a>
+                <a href="/suspensao/" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">🚫</div>
                 <h3>Cassação da CNH</h3>
                 <p>Atuação administrativa em processos de cassação, com acompanhamento técnico e suporte especializado para defesa de seus direitos.</p>
-                <a href="cassacao.html" class="card-link">Saiba mais →</a>
+                <a href="/cassacao/" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">📋</div>
                 <h3>Perda da Provisória</h3>
                 <p>Orientação para condutores que perderam a permissão durante o período probatório e desejam regularizar sua situação junto ao DETRAN.</p>
-                <a href="provisoria.html" class="card-link">Saiba mais →</a>
+                <a href="/provisoria/" class="card-link">Saiba mais →</a>
             </div>
         </div>
     </section>
@@ -102,7 +102,7 @@
     <section style="text-align: center; padding: 60px 5%;">
         <h2>Precisa de Ajuda com sua CNH?</h2>
         <p class="section-subtitle">Entre em contato agora e receba uma análise gratuita da sua situação administrativa</p>
-        <a href="contato.html" class="cta-button">Solicitar Atendimento</a>
+        <a href="/contato/" class="cta-button">Solicitar Atendimento</a>
     </section>
 
     <main style="padding: 20px;" class="content-page">
@@ -125,24 +125,24 @@
             <div class="footer-section">
                 <h3>Serviços</h3>
                 <ul>
-                    <li><a href="multas.html">Multas de Trânsito</a></li>
-                    <li><a href="suspensao.html">Suspensão da CNH</a></li>
-                    <li><a href="cassacao.html">Cassação da CNH</a></li>
-                    <li><a href="provisoria.html">Perda da Provisória</a></li>
+                    <li><a href="/multas/">Multas de Trânsito</a></li>
+                    <li><a href="/suspensao/">Suspensão da CNH</a></li>
+                    <li><a href="/cassacao/">Cassação da CNH</a></li>
+                    <li><a href="/provisoria/">Perda da Provisória</a></li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h3>Institucional</h3>
                 <ul>
-                    <li><a href="sobre.html">Sobre Nós</a></li>
-                    <li><a href="servicos.html">Nossos Serviços</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                    <li><a href="cnh-suspensa-curso-reciclagem.html">Reciclagem</a></li>
-                    <li><a href="lei-seca.html">Lei Seca</a></li>
-                    <li><a href="pontuacao-cnh.html">Pontuação</a></li>
-                    <li><a href="indicacao-condutor.html">Indicação De Condutor</a></li>
-                    <li><a href="recurso-multa-vencido.html">Recurso Multa Vencido</a></li>
+                    <li><a href="/sobre/">Sobre Nós</a></li>
+                    <li><a href="/servicos/">Nossos Serviços</a></li>
+                    <li><a href="/contato/">Contato</a></li>
+                    <li><a href="/curso-de-reciclagem/">Reciclagem</a></li>
+                    <li><a href="/lei-seca/">Lei Seca</a></li>
+                    <li><a href="/pontuacao-cnh/">Pontuação</a></li>
+                    <li><a href="/indicacao-de-condutor/">Indicação De Condutor</a></li>
+                    <li><a href="/recurso-multa-vencida/">Recurso Multa Vencido</a></li>
                 </ul>
             </div>
 
