--- a/multas/index.html
+++ b/multas/index.html
@@ -123,12 +123,13 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
-                <p>Orientação e suporte técnico para manter sua habilitação regularizada.</p>
+                <p>Soluções especializadas para resolver questões com lei seca, multas, suspensão, cassação e perda de provisória. Conte com nosso suporte técnico para regularizar sua habilitação com segurança e confiança.</p>
             </div>
 
             <div class="footer-section">
                 <h3>Serviços</h3>
                 <ul>
+                    <li><a href="/lei-seca/">Lei Seca</a></li>
                     <li><a href="/multas/">Multas de Trânsito</a></li>
                     <li><a href="/suspensao/">Suspensão da CNH</a></li>
                     <li><a href="/cassacao/">Cassação da CNH</a></li>
