--- a/suspensao/index.html
+++ b/suspensao/index.html
@@ -106,7 +106,7 @@
             <p>Atuamos com foco em soluções administrativas e estratégias técnicas para proteger o direito de dirigir dentro dos limites legais. Contamos com consultoria jurídica parceira para os casos que exigem acompanhamento judicial.</p>
 
             <div style="text-align: center; margin-top: 3rem;">
-                <a href="/contato/" class="cta-button">Falar com Nossa Equipe</a>
+                <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema%20de%20suspensao%20da%20minha%20CNH." target="_blank" class="cta-button">Falar com Nossa Equipe</a>
             </div>
         </div>
     </div>
@@ -117,7 +117,7 @@
         </div>
     </main>
 
-    <a href="https://wa.me/5511970162260" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema%20de%20suspensao%20da%20minha%20CNH." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
