Update WhatsApp link for consultation request

--- a/provisoria/index.html
+++ b/provisoria/index.html
@@ -129,7 +129,7 @@
         </div>
     </main>
 
-    <a href="https://wa.me/5511970162260" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
