--- a/contato/index.html
+++ b/contato/index.html
@@ -52,15 +52,15 @@
             <div class="contact-item">
                 <div class="contact-item-icon">💬</div>
                 <h3>WhatsApp</h3>
-                <p>(11) 99999-9999</p>
+                <p>(11) 99999-999</p>
                 <p style="font-size: 0.9rem; opacity: 0.8;">Atendimento rápido</p>
             </div>
 
             <div class="contact-item">
                 <div class="contact-item-icon">📍</div>
-                <h3>Endereço</h3>
-                <p>Av. Exemplo, 1000</p>
-                <p style="font-size: 0.9rem; opacity: 0.8;">São Paulo - SP</p>
+                <h3>Atendimento Presencial</h3>
+                <p>Atendimento em toda</p>
+                <p style="font-size: 0.9rem; opacity: 0.8;">Guarulhos - SP</p>
             </div>
         </div>
     </section>
@@ -123,7 +123,7 @@
 
             <div class="faq-item">
                 <h3>Quais documentos preciso enviar?</h3>
-                <p>Geralmente: CNH, notificação de autuação ou processo e documentos do veículo. A lista completa é enviada após o primeiro contato.</p>
+                <p>Geralmente: CNH, notificação de autuação ou processo. A lista completa é enviada após o primeiro contato.</p>
             </div>
 
             <div class="faq-item">
