--- a/contato/index.html
+++ b/contato/index.html
@@ -46,7 +46,7 @@
                 <div class="contact-item-icon">✉️</div>
                 <h3>E-mail</h3>
                 <p>contato@cnhemdiasolucoes.com.br</p>
-                <p style="font-size: 0.9rem; opacity: 0.8;">Resposta em até 24h</p>
+                <p style="font-size: 0.9rem; opacity: 0.8;">Resposta com rapidez</p>
             </div>
 
             <div class="contact-item">
@@ -54,13 +54,6 @@
                 <h3>WhatsApp</h3>
                 <p>(11) 99999-999</p>
                 <p style="font-size: 0.9rem; opacity: 0.8;">Atendimento rápido</p>
-            </div>
-
-            <div class="contact-item">
-                <div class="contact-item-icon">📍</div>
-                <h3>Atendimento Presencial</h3>
-                <p>Atendimento em toda</p>
-                <p style="font-size: 0.9rem; opacity: 0.8;">Guarulhos - SP</p>
             </div>
         </div>
     </section>
