--- a/contato/index.html
+++ b/contato/index.html
@@ -82,6 +82,7 @@
                 <label for="assunto">Assunto *</label>
                 <select id="assunto" name="assunto" required>
                     <option value="">Selecione o assunto</option>
+                    <option value="bafometro">Lei Seca/Recusa ao Bafômetro</option>
                     <option value="multas">Multas de Trânsito</option>
                     <option value="suspensao">Suspensão da CNH</option>
                     <option value="cassacao">Cassação da CNH</option>
