--- a/contato/index.html
+++ b/contato/index.html
@@ -101,7 +101,7 @@
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Nova solicitação - CNH em Dia Soluções">
 
-            <button type="submit" class="submit-button">Solicitar Avaliação Gratuita</button>
+            <button type="submit" class="submit-button">Solicitar Avaliação/Consultoria Gratuita</button>
         </form>
     </section>
 
