--- a/recusa-ao-bafometro/index.html
+++ b/recusa-ao-bafometro/index.html
@@ -33,8 +33,8 @@
     <section class="hero hero-page-specific">
         <div class="hero-content hero-content-page-specific">
             <div class="hero-text">
-                <h1>Recusa ao Bafômetro: Sua CNH Protegida com Defesa Especializada</h1>
-                <p class="hero-subtitle">A recusa ao teste do etilômetro gera multa de R$ 2.934,70 e suspensão da CNH por 12 meses. Não perca seu direito de dirigir. Nossa análise técnica identifica falhas processuais para a sua defesa.</p>
+                <h1>Recusa ao Bafômetro: Sua CNH Protegida com a CNH em Dia Soluções</h1>
+                <p class="hero-subtitle">A recusa ao teste do etilômetro gera multa de R$ 2.934,70 e suspensão da CNH por 12 meses. Não perca seu direito de dirigir. Nossa análise técnica identifica falhas para buscar o cancelamento da infração e você não perder o seu direito de dirigir.</p>
                 <div class="hero-highlight">
                     <strong>✅ Análise Gratuita e Confidencial</strong> - Avalie seu Auto de Infração sem compromisso.
                 </div>
@@ -77,7 +77,7 @@
 
         <section class="content-section">
             <h2 class="section-title-border">🛡️ Sua Defesa Administrativa é Possível</h2>
-            <p class="content-paragraph">Embora as penalidades sejam severas, você tem o direito constitucional de ampla defesa. Nosso trabalho consiste em analisar o processo administrativo de ponta a ponta, buscando nulidades e falhas que possam levar ao cancelamento da autuação e, consequentemente, da multa e da suspensão da CNH.</p>
+            <p class="content-paragraph">Embora as penalidades sejam severas, você tem o direito constitucional de ampla defesa. Nosso trabalho consiste em analisar o seu auto de infração de ponta a ponta, buscando nulidades e falhas que possam levar ao cancelamento da autuação e, consequentemente, da multa e da suspensão da CNH.</p>
 
             <p class="content-paragraph">Os principais pontos de análise técnica incluem:</p>
             <ul class="content-list">
@@ -104,7 +104,7 @@
                     <div class="step-number">2</div>
                     <div class="step-content">
                         <h4>Elaboração da Defesa</h4>
-                        <p>Após a contratação, preparamos a Defesa Prévia e os Recursos (JARI e CETRAN) com argumentos técnicos e jurídicos sólidos, maximizando suas chances de sucesso.</p>
+                        <p>Após a contratação, preparamos a Defesa Prévia e os Recursos (JARI e CETRAN) com bons argumentos, maximizando suas chances de sucesso.</p>
                     </div>
                 </div>
                 <div class="step-item">
