--- a/cassacao/index.html
+++ b/cassacao/index.html
@@ -6,6 +6,7 @@
     <title>Cassação da CNH - CNH em Dia Soluções</title>
     <meta name="description" content="Assessoria administrativa e técnica em processos de cassação da CNH. Orientação especializada para ajudar você a regularizar sua habilitação e entender seus direitos.">
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
 </head>
 <body>
     <header>
@@ -162,7 +163,7 @@
         </div>
     </main>
 
-    <a href="https://wa.me/5511970162260" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511994187695" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
@@ -200,9 +201,9 @@
             <div class="footer-section">
                 <h3>Contato</h3>
                 <ul>
-                    <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
-                    <li>📍 São Paulo - SP</li>
+                    <li>📞 (11) 9 9418-7695</li>
+                    <li>✉️ cnhemdiasolucoes@gmail.com</li>
+                    <li>📍 Guarulhos - SP</li>
                 </ul>
             </div>
         </div>
