--- a/curso-de-reciclagem/index.html
+++ b/curso-de-reciclagem/index.html
@@ -8,6 +8,7 @@
     <link rel="canonical" href="https://cnhemdiasolucoes.com.br/cnh-suspensa-reciclagem">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
 </head>
 <body>
     <!-- Header -->
@@ -122,7 +123,7 @@
         </div>
     </main>
 
-    <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
@@ -162,9 +163,9 @@
             <div class="footer-section">
                 <h3>Contato</h3>
                 <ul>
-                    <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
-                    <li>📍 São Paulo - SP</li>
+                    <li>📞 (11) 9 9418-7695</li>
+                    <li>✉️ cnhemdiasolucoes@gmail.com</li>
+                    <li>📍 Guarulhos - SP</li>
                 </ul>
             </div>
         </div>
