--- a/recusa-ao-bafometro/index.html
+++ b/recusa-ao-bafometro/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/style-home.css">
     <!-- Novo CSS para estilização profissional das seções de conteúdo -->
     <link rel="stylesheet" href="/static/style-page-recusa.css">
+    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
 </head>
 <body>
     <header>
@@ -38,7 +39,7 @@
                 <div class="hero-highlight">
                     <strong>✅ Análise Gratuita e Confidencial</strong> - Avalie seu Auto de Infração sem compromisso.
                 </div>
-                <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="cta-button">Fale com um Especialista Agora</a>
+                <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="cta-button">Fale com um Especialista Agora</a>
             </div>
         </div>
     </section>
@@ -127,7 +128,7 @@
         <section class="cta-final-section">
             <h2>Não Deixe a Suspensão Comprometer Sua Vida.</h2>
             <p class="section-subtitle">O tempo é crucial em processos administrativos. Se você foi autuado por recusa ao teste do bafômetro, entre em contato imediatamente para uma análise gratuita e confidencial do seu caso.</p>
-            <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="cta-button">Solicitar Análise Gratuita Agora</a>
+            <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="cta-button">Solicitar Análise Gratuita Agora</a>
         </section>
 
         <section class="references-section">
@@ -142,7 +143,7 @@
     </aside>
 
     <!-- BOTÃO WHATSAPP -->
-    <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
@@ -182,9 +183,9 @@
             <div class="footer-section">
                 <h3>Contato</h3>
                 <ul>
-                    <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
-                    <li>📍 São Paulo - SP</li>
+                    <li>📞 (11) 9 9418-7695</li>
+                    <li>✉️ cnhemdiasolucoes@gmail.com</li>
+                    <li>📍 Guarulhos - SP</li>
                 </ul>
             </div>
         </div>
