--- a/servicos/index.html
+++ b/servicos/index.html
@@ -6,6 +6,7 @@
     <title>Nossos Serviços - CNH em Dia Soluções</title>
     <meta name="description" content="Conheça os serviços da CNH em Dia: assessoria administrativa em multas, suspensão, cassação e perda de CNH provisória.">
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
 </head>
 <body>
     <header>
@@ -125,7 +126,7 @@
     <section style="text-align: center; padding: 60px 5%;">
         <h2>Precisa Regularizar Sua CNH?</h2>
         <p class="section-subtitle">Entre em contato e receba uma análise personalizada do seu caso</p>
-        <a href="/contato/" class="cta-button">Falar com Especialista</a>
+        <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="cta-button">Falar com Especialista</a>
     </section>
 
     <main style="padding: 20px;" class="content-page">
@@ -134,7 +135,7 @@
         </div>
     </main>
 
-    <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
@@ -173,9 +174,9 @@
             <div class="footer-section">
                 <h3>Contato</h3>
                 <ul>
-                    <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
-                    <li>📍 São Paulo - SP</li>
+                    <li>📞 (11) 9 9418-7695</li>
+                    <li>✉️ cnhemdiasolucoes@gmail.com</li>
+                    <li>📍 Guarulhos - SP</li>
                 </ul>
             </div>
         </div>
