--- a/sobre/index.html
+++ b/sobre/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="CNH, suspensão, cassação, multa, provisória, recurso de multa, defesa CNH, trânsito, habilitação">
     <meta name="author" content="CNH em Dia Soluções">
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
 </head>
 
 <body>
@@ -113,7 +114,7 @@
         <section class="bg-light" style="text-align: center; padding: 60px 5%;">
             <h2>Pronto para Resolver seu Problema?</h2>
             <p class="section-subtitle">Entre em contato e receba atendimento especializado</p>
-            <a href="/contato/" class="cta-button">Falar com Nossa Equipe</a>
+            <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="cta-button">Falar com Nossa Equipe</a>
         </section>
     </main>
 
@@ -123,7 +124,7 @@
         </div>
     </main>
 
-    <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
@@ -161,9 +162,9 @@
             <div class="footer-section">
                 <h3>Contato</h3>
                 <ul>
-                    <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
-                    <li>📍 São Paulo - SP</li>
+                    <li>📞 (11) 9 9418-7695</li>
+                    <li>✉️ cnhemdiasolucoes@gmail.com</li>
+                    <li>📍 Guarulhos - SP</li>
                 </ul>
             </div>
         </div>
