--- a/suspensao/index.html
+++ b/suspensao/index.html
@@ -6,6 +6,7 @@
     <title>Suspensão da CNH - CNH em Dia Soluções</title>
     <meta name="description" content="Assessoria especializada em processos de suspensão da CNH. Suporte administrativo e estratégias técnicas para regularizar sua habilitação.">
     <link rel="stylesheet" href=/static/styles.css">
+    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
 </head>
 <body>
     <header>
@@ -106,7 +107,7 @@
             <p>Atuamos com foco em soluções administrativas e estratégias técnicas para proteger o direito de dirigir dentro dos limites legais. Contamos com consultoria jurídica parceira para os casos que exigem acompanhamento judicial.</p>
 
             <div style="text-align: center; margin-top: 3rem;">
-                <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema%20de%20suspensao%20da%20minha%20CNH." target="_blank" class="cta-button">Falar com Nossa Equipe</a>
+                <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema%20de%20suspensao%20da%20minha%20CNH." target="_blank" class="cta-button">Falar com Nossa Equipe</a>
             </div>
         </div>
     </div>
@@ -117,7 +118,7 @@
         </div>
     </main>
 
-    <a href="https://wa.me/5511970162260?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema%20de%20suspensao%20da%20minha%20CNH." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema%20de%20suspensao%20da%20minha%20CNH." class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
 
@@ -156,9 +157,9 @@
             <div class="footer-section">
                 <h3>Contato</h3>
                 <ul>
-                    <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
-                    <li>📍 São Paulo - SP</li>
+                    <li>📞 (11) 9 9418-7695</li>
+                    <li>✉️ cnhemdiasolucoes@gmail.com</li>
+                    <li>📍 Guarulhos - SP</li>
                 </ul>
             </div>
         </div>
