--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CNH em Dia Soluções - Regularização Administrativa de Habilitação</title>
+    <title>CNH em Dia Soluções - Sua CNH em Dia, Sua Vida Em Movimento.</title>
     <meta name="description" content="Soluções especializadas em processos administrativos de CNH: multas, suspensão, cassação e perda de provisória. Regularize sua habilitação com segurança e suporte técnico especializado.">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/style-home.css">
