--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17709604708"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17709604708');
+</script>
+
+    
   <meta http-equiv="refresh" content="0; url=https://wa.me/5511994187695?text=Olá%20👋%20vi%20seu%20contato%20da%20CNH%20em%20Dia%20Soluções%20e%20gostaria%20de%20saber%20mais%20sobre%20a%20regularização%20da%20minha%20CNH.">
   <title>Redirecionando para o WhatsApp...</title>
 </head>
@@ -8,3 +19,4 @@
   <p>Redirecionando para o WhatsApp...</p>
 </body>
 </html>
+
