--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Soluções especializadas em processos administrativos de CNH: multas, suspensão, cassação e perda de provisória. Regularize sua habilitação com segurança e suporte técnico especializado.">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/style-home.css">
-    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
+    <link rel="icon" type="image/svg" href="/static/images/icone.png">
 </head>
 <body>
     <header>
