--- a/suspensao/index.html
+++ b/suspensao/index.html
@@ -18,7 +18,7 @@
     <title>Suspensão da CNH - CNH em Dia Soluções</title>
     <meta name="description" content="Assessoria especializada em processos de suspensão da CNH. Suporte administrativo e estratégias técnicas para regularizar sua habilitação.">
     <link rel="stylesheet" href=/static/styles.css">
-    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
+    <link rel="icon" type="image/png" href="/static/images/icone.png">
 </head>
 <body>
     <header>
