--- a/recusa-ao-bafometro/index.html
+++ b/recusa-ao-bafometro/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/static/style-home.css">
     <!-- Novo CSS para estilização profissional das seções de conteúdo -->
     <link rel="stylesheet" href="/static/style-page-recusa.css">
-    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
+    <link rel="icon" type="image/png" href="/static/images/icone.png">
 </head>
 <body>
     <header>
