--- a/pontuacao-cnh/index.html
+++ b/pontuacao-cnh/index.html
@@ -17,7 +17,7 @@
     <title>Pontuação na CNH: Sistema de Pontos Explicado - CNH em Dia Soluções</title>
     <meta name="description" content="Entenda como funciona o sistema de pontuação na CNH, os limites de pontos e como evitar a suspensão por acúmulo.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
+    <link rel="icon" type="image/png" href="/static/images/icone.png">
 </head>
 <body>
     <!-- Header -->
