--- a/lei-seca/index.html
+++ b/lei-seca/index.html
@@ -17,7 +17,7 @@
     <title>Lei Seca: Tudo Que Você Precisa Saber - CNH em Dia Soluções</title>
     <meta name="description" content="Entenda como funciona a Lei Seca, suas punições, limites legais de álcool e as consequências de dirigir sob efeito de bebidas alcoólicas. Consultoria especializada com suporte jurídico.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
+    <link rel="icon" type="image/png" href="/static/images/icone.png">
 </head>
 <body>
     <!-- Header -->
