--- a/indicacao-de-condutor/index.html
+++ b/indicacao-de-condutor/index.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Entenda como funciona a indicação de condutor, quando transferir pontos ao real condutor e os cuidados legais para evitar problemas administrativos ou penais.">
     <link rel="canonical" href="https://cnhemdiasolucoes.com.br/indicacao-condutor">
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
+    <link rel="icon" type="image/png" href="/static/images/icone.png">
 
     <!-- Open Graph / Social -->
     <meta property="og:title" content="Indicação de Condutor: Transferência de Pontos | CNH em Dia Soluções">
