--- a/curso-de-reciclagem/index.html
+++ b/curso-de-reciclagem/index.html
@@ -18,7 +18,7 @@
     <link rel="canonical" href="https://cnhemdiasolucoes.com.br/cnh-suspensa-reciclagem">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/svg" href="/static/images/icone.svg">
+    <link rel="icon" type="image/png" href="/static/images/icone.png">
 </head>
 <body>
     <!-- Header -->
